Some other change Travis yml.

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ after_success:
         - docker build -t tejasdewan/multi-server ./server
         - docker build -t tejasdewan/multi-worker ./worker
         # Log in to the docker CLI
-        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin docker.io
         # Take images and push them to docker hub
         - docker push tejasdewan/muti-client
         - docker push tejasdewan/muti-nginx
