--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ after_success:
         - docker build -t tejasdewan/multi-worker ./worker
         # Log in to the docker CLI
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin docker.io
+        - docker images
         # Take images and push them to docker hub
         - docker push tejasdewan/muti-client
         - docker push tejasdewan/muti-nginx
