--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ deploy:
         edge: true
         provider: elasticbeanstalk
         region: "us-east-2"
-        app: "mutli-docker"
+        app: "multi-docker"
         env: "MultiDocker-env-1"
         bucket_name: "elasticbeanstalk-us-east-2-814842048115"
         bucket_path: "docker-multi"
